# fictional

./: .gitignore  pyproject.toml
fictional/: __init__.py
notes/: agents brainstorming 1.md  brainstorming 1.md  challenges.md  ideas.md  pauses.md  requirements.md
