[project]
name = "fictional"
version = "0.1.0"
description = "[WIP] More detail will be added as the package is developed."
readme = "README.md"
authors = [
    { name = "Hart Traveller", email = "24962209+harttraveller@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
