[project]
name = "fictional"
version = "0.1.0"
description = "[WIP] More detail will be added as the package is developed."
readme = "README.md"
authors = [
    { name = "Hart Traveller", email = "24962209+harttraveller@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.22.5",
    "llama-cpp-python>=0.3.16",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "rustworkx>=0.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
